# maskeringsscript

./: .gitignore  CHANGELOG.md  LICENCE_EUPL_1_2_NL.md  LICENSE_NL.md  README.md  pyproject.toml
raw_data/: Sample_Rotterdam.xlsx
results/: Sample_Rotterdam_output.xlsx
src/anonymizer/: __init__.py  __main__.py  anonymizer.py
src/anonymizer/config/: tag_translations.json
src/anonymizer/helpers/: __init__.py
src/anonymizer/helpers/kvk_preprocessing/: __init__.py  __main__.py  kvk_preprocessing.py
src/anonymizer/helpers/sample_testset/: __init__.py  __main__.py  sample_testset.py
src/anonymizer/helpers/scoring/: __init__.py  __main__.py  scoring.py
src/anonymizer/helpers/streetnames/: __init__.py  __main__.py  streetnames.py
src/anonymizer/input_files/: ListClassifier Basic.xlsx  Whitelist Basic.xlsx
tests/: processing_and_testing.ipynb
