[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anonymizer"
version = "1.1.2"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.3.2",
    "numpy>=2.3.3",
    "flashtext>=2.7",
    "gliner>=0.2.22",
    "symspellpy>=6.9.0",
    "transformers>=4.51.0",
    "openpyxl>=3.1.5",
    "xlsxwriter>=3.2.9"
]
readme = "README.md"
license = "EUPL-1.2"
license-files = ["LICENSE.md", "LICENSE_NL.md"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
anonymizer = ["config/tag_translations.json", "input_files/*.xlsx"]